--- a/src/page-3.html
+++ b/src/page-3.html
@@ -168,14 +168,11 @@
                                             </div>
                                         </li>
 
-                                        <li class="tm-connected">
-                                            <div class="uk-flex uk-flex-between">
-                                                <div>Ожидаем игрока...</div>
-                                                <div><i class="fa fa-hourglass-start" aria-hidden="true"></i></div>
-                                            </div>
-                                        </li>
-
-
+                                        <li>Ожидаем игрока...</li>
+                                        <li>Ожидаем игрока...</li>
+                                        <li>Ожидаем игрока...</li>
+                                        <li>Ожидаем игрока...</li>
+                                        <li>Ожидаем игрока...</li>
                                     </ul>
                                 </div>
                             </div>
