--- a/src/page-3.html
+++ b/src/page-3.html
@@ -179,7 +179,18 @@
 
                             <div>
                                 <h2>Розыгрыш</h2>
-                                <div class="tm-equal-height"></div>
+                                <div class="tm-equal-height">
+                                    <div class="tm-raffle-wrap uk-flex uk-flex-center uk-flex-stretch">
+                                        <div class="uk-flex uk-flex-column uk-flex-between">
+                                            <div class="uk-margin-medium-bottom">
+                                                <video loop muted playsinline uk-video>
+                                                    <source src="images/anim2.gif.mp4" type="video/mp4">
+                                                </video>
+                                            </div>
+                                            <button type="button" class="uk-button uk-button-secondary uk-width-1-1">Начать игру</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
 
