--- a/src/index.html
+++ b/src/index.html
@@ -170,8 +170,8 @@
                                 <div>
                                     <h3>Роль</h3>
                                     <div class="uk-button-group">
-                                        <button class="uk-button">Участник</button>
-                                        <button class="uk-button">Создатель</button>
+                                        <button class="tm-button-role tm-role-user uk-button uk-active">Участник</button>
+                                        <button class="tm-button-role tm-role-creator uk-button">Создатель</button>
                                     </div>
                                 </div>
 
@@ -204,14 +204,14 @@
                                     </div>
                                 </div>
 
-                                <div>
-                                    <button type="button" class="uk-button">Показать</button>
+                                <div class="uk-flex uk-flex-bottom">
+                                    <button type="button" class="uk-button uk-button-secondary">Показать</button>
                                 </div>
                             </div>
                         </div>
 
                         <!-- game cards -->
-                        <div class="">
+                        <div class="tm-game-cards">
                             <div class="uk-child-width-1-3@s uk-child-width-1-5@m" uk-grid>
 
                                 <!--card-->
@@ -384,8 +384,8 @@
                                 <div>
                                     <h3>Роль</h3>
                                     <div class="uk-button-group">
-                                        <button class="uk-button">Участник</button>
-                                        <button class="uk-button">Создатель</button>
+                                        <button class="tm-button-role tm-role-user uk-button uk-active">Участник</button>
+                                        <button class="tm-button-role tm-role-creator uk-button">Создатель</button>
                                     </div>
                                 </div>
 
@@ -418,14 +418,14 @@
                                     </div>
                                 </div>
 
-                                <div>
-                                    <button type="button" class="uk-button">Показать</button>
+                                <div class="uk-flex uk-flex-bottom">
+                                    <button type="button" class="uk-button uk-button-secondary">Показать</button>
                                 </div>
                             </div>
                         </div>
 
                         <!-- game cards -->
-                        <div class="">
+                        <div class="tm-game-cards">
                             <div class="uk-child-width-1-3@s uk-child-width-1-5@m" uk-grid>
 
                                 <!--card-->
