--- a/src/page-3.html
+++ b/src/page-3.html
@@ -139,7 +139,7 @@
                             <div>
                                 <h2>Участники</h2>
                                 <div class="tm-equal-height">
-                                    <ul class="tm-leader-list uk-list">
+                                    <ul class="tm-members-list uk-list">
                                         <li class="tm-connected">
                                             <div class="uk-flex uk-flex-between">
                                                 <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
@@ -233,7 +233,8 @@
                 </div>
 
                 <!--other games-->
-                <div class="uk-border-rounded uk-background-primary">
+                <!--common games-->
+                <div class="tm-games uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
                         <h2>Другие игры:</h2>
                     </div>
@@ -241,12 +242,12 @@
                     <div class="tm-box">
 
                         <!-- game cards -->
-                        <div class="">
+                        <div class="tm-game-cards">
                             <div class="uk-child-width-1-3@s uk-child-width-1-5@m" uk-grid>
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -268,7 +269,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-open uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">2.4500<sup class="uk-text-uppercase">eth</sup></div>
@@ -290,7 +291,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0009<sup class="uk-text-uppercase">eth</sup></div>
@@ -312,7 +313,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.0000<sup class="uk-text-uppercase">eth</sup></div>
@@ -334,7 +335,7 @@
 
                                 <!--card-->
                                 <div>
-                                    <div class="uk-card">
+                                    <div class="tm-card-private uk-card">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">0.0500<sup class="uk-text-uppercase">eth</sup></div>
@@ -364,7 +365,6 @@
                     </div>
 
                 </div>
-
 
             </div>
 
