--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
                                     <!--show filter-->
                                     <div>
                                         <button type="button" class="tm-button-filter uk-button"
-                                                uk-toggle="herarget: #vasya; target: #tm-my-game-filter; animation: uk-animation-fade">
+                                                uk-toggle="target: #tm-my-game-filter; animation: uk-animation-fade">
                                             Фильтр
                                         </button>
                                     </div>
