--- a/src/page-3.html
+++ b/src/page-3.html
@@ -182,7 +182,7 @@
 
                             <div>
                                 <h2>Розыгрыш</h2>
-                                <div class="tm-equal-height">
+                                <div class="tm-equal-height uk-background-secondary">
                                     <div class="tm-raffle-wrap uk-flex uk-flex-center uk-flex-stretch">
                                         <div class="uk-flex uk-flex-column uk-flex-between">
                                             <div class="uk-margin-medium-bottom">
