--- a/src/page-4.html
+++ b/src/page-4.html
@@ -182,7 +182,7 @@
 
                             <div>
                                 <h2>Розыгрыш</h2>
-                                <div class="tm-equal-height">
+                                <div class="tm-equal-height uk-background-secondary">
                                     <canvas id="tm-raffle-canvas" class="tm-raffle-canvas"></canvas>
                                 </div>
                             </div>
