--- a/src/page-3.html
+++ b/src/page-3.html
@@ -142,7 +142,7 @@
                                     <ul class="tm-members-list uk-list">
                                         <li class="tm-connected">
                                             <div class="uk-flex uk-flex-between">
-                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div class="uk-text-truncate">0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
                                                 <div>1.5 <span class="uk-text-uppercase">eth</span></div>
                                             </div>
                                         </li>
@@ -154,19 +154,19 @@
                                         </li>
                                         <li class="tm-connected">
                                             <div class="uk-flex uk-flex-between">
-                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div class="uk-text-truncate">0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
                                                 <div>1.5 <span class="uk-text-uppercase">eth</span></div>
                                             </div>
                                         </li>
                                         <li class="tm-connected">
                                             <div class="uk-flex uk-flex-between">
-                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div class="uk-text-truncate">0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
                                                 <div>1.5 <span class="uk-text-uppercase">eth</span></div>
                                             </div>
                                         </li>
                                         <li class="tm-connected">
                                             <div class="uk-flex uk-flex-between">
-                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div class="uk-text-truncate">0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
                                                 <div>1.5 <span class="uk-text-uppercase">eth</span></div>
                                             </div>
                                         </li>
@@ -182,16 +182,14 @@
 
                             <div>
                                 <h2>Розыгрыш</h2>
-                                <div class="tm-equal-height uk-background-secondary">
-                                    <div class="tm-raffle-wrap uk-flex uk-flex-center uk-flex-stretch">
-                                        <div class="uk-flex uk-flex-column uk-flex-between">
-                                            <div class="uk-margin-medium-bottom">
-                                                <video loop muted playsinline uk-video>
-                                                    <source src="images/anim2.gif.mp4" type="video/mp4">
-                                                </video>
-                                            </div>
-                                            <button type="button" class="uk-button uk-button-secondary uk-width-1-1">Начать игру</button>
+                                <div class="tm-equal-height uk-flex uk-flex-center uk-flex-stretch uk-background-primary">
+                                    <div class="tm-raffle-wrap uk-flex uk-flex-column uk-flex-between">
+                                        <div class="uk-margin-medium-bottom">
+                                            <video loop muted playsinline uk-video>
+                                                <source src="images/anim2.gif.mp4" type="video/mp4">
+                                            </video>
                                         </div>
+                                        <button type="button" class="uk-button uk-button-large uk-button-secondary uk-width-1-1">Начать игру</button>
                                     </div>
                                 </div>
                             </div>
