--- a/src/page-2.html
+++ b/src/page-2.html
@@ -60,7 +60,7 @@
             </header>
 
             <!-- Content -->
-            <div class="uk-container" uk-margin="margin: uk-margin-top">
+            <div class="uk-container" uk-margin="margin: uk-margin-medium-top">
 
                 <!--game statistic-->
                 <div class="tm-box-large tm-background-top uk-border-rounded">
