--- a/src/page-3.html
+++ b/src/page-3.html
@@ -61,7 +61,7 @@
 
 
             <!-- Content -->
-            <div class="uk-container" uk-margin="margin: uk-margin-top">
+            <div class="uk-container" uk-margin="margin: uk-margin-medium-top">
 
                 <!--game-->
                 <div class="uk-border-rounded">
