--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             </header>
 
             <!-- Content -->
-            <div class="uk-container" uk-margin="margin: uk-margin-top">
+            <div class="uk-container" uk-margin="margin: uk-margin-medium-top">
 
                 <!--new game-->
                 <div class="tm-box-large tm-top uk-border-rounded">
