--- a/src/page-4.html
+++ b/src/page-4.html
@@ -182,7 +182,7 @@
 
                             <div>
                                 <h2>Розыгрыш</h2>
-                                <div class="tm-equal-height uk-child-width-1-1 uk-flex uk-flex-stretch uk-background-primary">
+                                <div class="tm-equal-height uk-background-primary">
                                     <canvas id="tm-raffle-canvas" class="tm-raffle-canvas"></canvas>
                                 </div>
                             </div>
