--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                         <div class="uk-navbar-right uk-flex-center">
 
                             <!--navbar menu-->
-                            <ul class="uk-navbar-nav uk-visible@m">
+                            <ul class="uk-navbar-nav uk-margin-large-right uk-visible@m">
                                 <li><a href="#">FAQ</a></li>
                                 <li><a href="#">Смартконтракт</a></li>
                                 <li><a href="#">Контакты</a></li>
