--- a/src/page-3.html
+++ b/src/page-3.html
@@ -133,7 +133,7 @@
                     </div>
 
                     <!--game body-->
-                    <div class="tm-box-large tm-background-secondary">
+                    <div class="tm-box-large tm-background-secondary tm-fonts-alt">
                         <div class="uk-child-width-1-2@m" uk-grid
                              uk-height-match="target: .tm-equal-height">
                             <div>
