--- a/src/page-4.html
+++ b/src/page-4.html
@@ -67,7 +67,7 @@
                 <div class="uk-border-rounded">
 
                     <!--game header-->
-                    <div class="tm-box-small tm-background-top">
+                    <div class="tm-box-small tm-background-top tm-fonts-top">
                         <div class="uk-flex-between uk-flex-middle" uk-grid>
                             <div>
                                 <div class="uk-flex-middle" uk-grid>
@@ -86,7 +86,7 @@
 
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
-                                            <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
+                                            <div class="tm-icon-wrap uk-margin-small-right">
                                                 <img src="images/icon-bet.png" alt="">
                                             </div>
 
@@ -99,7 +99,7 @@
 
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
-                                            <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
+                                            <div class="tm-icon-wrap uk-margin-small-right">
                                                 <i class="fa fa-gift" aria-hidden="true"></i>
                                             </div>
 
@@ -112,7 +112,7 @@
 
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
-                                            <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
+                                            <div class="tm-icon-wrap uk-margin-small-right">
                                                 <i class="fa fa-unlock-alt" aria-hidden="true"></i>
                                             </div>
 
@@ -133,7 +133,7 @@
                     </div>
 
                     <!--game body-->
-                    <div class="tm-box-large tm-background-secondary">
+                    <div class="tm-box-large tm-background-secondary tm-fonts-alt">
                         <div class="uk-child-width-1-2@m" uk-grid
                              uk-height-match="target: .tm-equal-height">
                             <div>
