--- a/src/page-3.html
+++ b/src/page-3.html
@@ -200,18 +200,18 @@
                     </div>
 
                     <!--game footer-->
-                    <div class="tm-box tm-background-primary">
+                    <div class="tm-fonts-alt tm-box tm-background-primary">
                         <div class="uk-child-width-1-2@m" uk-grid>
                             <div>
                                 <h2>Рассказать о игре друзьям</h2>
 
-                                <div class="uk-flex-middle uk-grid-small" uk-grid>
-                                    <div>
+                                <div class="uk-flex-middle uk-flex-between uk-grid-small" uk-grid>
+                                    <div class="uk-width-expand">
                                         <input class="uk-input" type="text" value="https://CryptoBets.com/b/hsкеуф%B8" readonly>
                                     </div>
 
                                     <div>
-                                        <button type="button" class="tm-button-tertiary uk-button">Играть</button>
+                                        <button type="button" class="tm-button-default uk-button uk-button-default">Скопировать</button>
                                     </div>
                                 </div>
                             </div>
