--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,8 @@
 
                         <!--type-->
                         <div>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            <i class="fa fa-angle-up" aria-hidden="true"></i>
                             <h3>Тип игры</h3>
                             <div class="uk-grid-small" uk-grid>
                                 <div>
