--- a/src/page-2.html
+++ b/src/page-2.html
@@ -63,7 +63,7 @@
             <div class="uk-container" uk-margin="margin: uk-margin-medium-top">
 
                 <!--game statistic-->
-                <div class="tm-box-large tm-background-top uk-border-rounded">
+                <div class="tm-top-alt tm-box-large tm-background-top uk-border-rounded">
                     <div class="uk-child-width-1-3@m" uk-grid>
                         <div>
                             <h2>Ставки за сутки</h2>
@@ -73,7 +73,7 @@
 
                         <div>
                             <h2>Джекпот</h2>
-                            <div class="bet">21.050 <sup class="uk-text-uppercase">eth</sup></div>
+                            <div class="bet">21.050<sup class="uk-text-uppercase">eth</sup></div>
                             <div>Выиграл <span>0x7a4ca7</span></div>
                         </div>
 
