--- a/src/page-2.html
+++ b/src/page-2.html
@@ -71,31 +71,31 @@
                             <div><span>16800</span> ставок</div>
                         </div>
 
-                        <div>
+                        <div class="tm-border-left">
                             <h2>Джекпот</h2>
                             <div class="bet">21.050<sup class="uk-text-uppercase">eth</sup></div>
                             <div>Выиграл <span>0x7a4ca7</span></div>
                         </div>
 
-                        <div>
+                        <div class="tm-border-left">
                             <h2>Лидеры</h2>
                             <ul class="tm-leader-list uk-list">
                                 <li>
                                     <div class="uk-flex uk-flex-between">
                                         <div>0x828gfg235235b8</div>
-                                        <div>21.050 <span class="uk-text-uppercase">eth</span></div>
+                                        <div class="tm-text-bets">21.050 <span class="uk-text-uppercase">eth</span></div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="uk-flex uk-flex-between">
                                         <div>0x828gfg235235b8</div>
-                                        <div>21.050 <span class="uk-text-uppercase">eth</span></div>
+                                        <div class="tm-text-bets">21.050 <span class="uk-text-uppercase">eth</span></div>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="uk-flex uk-flex-between">
                                         <div>0x828gfg235235b8</div>
-                                        <div>21.050 <span class="uk-text-uppercase">eth</span></div>
+                                        <div class="tm-text-bets">21.050 <span class="uk-text-uppercase">eth</span></div>
                                     </div>
                                 </li>
                             </ul>
