--- a/src/page-2.html
+++ b/src/page-2.html
@@ -64,20 +64,20 @@
 
                 <!--game statistic-->
                 <div class="tm-top-alt tm-box-large tm-background-top uk-border-rounded">
-                    <div class="uk-child-width-1-3@m" uk-grid>
+                    <div class="uk-child-width-1-3@m uk-grid-divider" uk-grid>
                         <div>
                             <h2>Ставки за сутки</h2>
                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
                             <div><span>16800</span> ставок</div>
                         </div>
 
-                        <div class="tm-border-left">
+                        <div>
                             <h2>Джекпот</h2>
                             <div class="bet">21.050<sup class="uk-text-uppercase">eth</sup></div>
                             <div>Выиграл <span>0x7a4ca7</span></div>
                         </div>
 
-                        <div class="tm-border-left">
+                        <div>
                             <h2>Лидеры</h2>
                             <ul class="tm-leader-list uk-list">
                                 <li>
