--- a/src/page-4.html
+++ b/src/page-4.html
@@ -211,20 +211,13 @@
 
                             <div>
                                 <h2>Поделиться в соц. сетях</h2>
-                                <div class="social-likes">
+                                <div class="social-likes uk-iconnav uk-flex uk-child-width-expand">
                                     <div data-service="facebook" title="Share link on Facebook">Facebook</div>
                                     <div data-service="twitter" title="Share link on Twitter">Twitter</div>
                                     <div data-service="plusone" title="Share link on Google+">Google+</div>
                                     <div data-service="vkontakte" title="Share link on Vkontakte">Vkontakte</div>
                                     <div data-service="odnoklassniki" title="Share link on Odnoklassniki">Odnoklassniki</div>
                                 </div>
-                                <ul class="uk-iconnav uk-child-width-expand">
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-paper-plane" aria-hidden="true"></i></a></li>
-                                </ul>
                             </div>
                         </div>
                     </div>
