--- a/src/page-4.html
+++ b/src/page-4.html
@@ -211,7 +211,7 @@
 
                             <div>
                                 <h2>Поделиться в соц. сетях</h2>
-                                <div class="tm-social social-likes uk-iconnav uk-flex uk-flex-between uk-child-width-expand">
+                                <div class="tm-social social-likes uk-flex uk-flex-between uk-child-width-expand">
                                     <div data-service="facebook" title="Share link on Facebook"></div>
                                     <div data-service="twitter" title="Share link on Twitter"></div>
                                     <div data-service="plusone" title="Share link on Google+"></div>
