--- a/src/page-3.html
+++ b/src/page-3.html
@@ -218,13 +218,13 @@
 
                             <div>
                                 <h2>Поделиться в соц. сетях</h2>
-                                <ul class="uk-iconnav uk-child-width-expand">
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-paper-plane" aria-hidden="true"></i></a></li>
-                                </ul>
+                                <div class="tm-social social-likes uk-flex uk-flex-between uk-child-width-expand">
+                                    <div data-service="facebook" title="Share link on Facebook"></div>
+                                    <div data-service="twitter" title="Share link on Twitter"></div>
+                                    <div data-service="plusone" title="Share link on Google+"></div>
+                                    <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                    <div data-service="odnoklassniki" title="Share link on Odnoklassniki"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
