--- a/src/page-3.html
+++ b/src/page-3.html
@@ -234,7 +234,7 @@
                 <!--common games-->
                 <div class="tm-games uk-border-rounded uk-background-primary">
                     <div class="tm-box-small uk-background-secondary">
-                        <h2>Другие игры:</h2>
+                        <h2 class="uk-margin-remove">Другие игры:</h2>
                     </div>
 
                     <div class="tm-box">
