--- a/src/page-2.html
+++ b/src/page-2.html
@@ -201,7 +201,7 @@
 
                                 <!--card small-->
                                 <div>
-                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
+                                    <div class="uk-card uk-card-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -231,7 +231,7 @@
 
                                 <!--card small-->
                                 <div>
-                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
+                                    <div class="uk-card uk-card-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -261,7 +261,7 @@
 
                                 <!--card small-->
                                 <div>
-                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
+                                    <div class="uk-card uk-card-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -291,7 +291,7 @@
 
                                 <!--card small-->
                                 <div>
-                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
+                                    <div class="uk-card uk-card-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -321,7 +321,7 @@
 
                                 <!--card small-->
                                 <div>
-                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
+                                    <div class="uk-card uk-card-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
@@ -351,7 +351,7 @@
 
                                 <!--card small-->
                                 <div>
-                                    <div class="uk-card uk-cerd-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
+                                    <div class="uk-card uk-card-small uk-flex uk-flex-wrap uk-flex-middle uk-flex-between">
                                         <div class="uk-card-header">
                                             <h3>Ставка</h3>
                                             <div class="bet">1.9999<sup class="uk-text-uppercase">eth</sup></div>
